# ChatNVN

./: .gitignore  Procfile  README.md  debug_script.py  pyproject.toml  railway.json  report.md  verify_persistence.py  verify_rag.py  verify_rag_with_docs.py
data/chat_history/: 23ff1849-e7db-4b8a-8e71-c915e784dd20.json  9548c818-5438-4eb5-b849-e7605616549d.json  9548c818-5438-4eb5-b849-e7605616549d_meta.json  efc29541-028a-44cb-9874-f4b40a9e7bca.json  efc29541-028a-44cb-9874-f4b40a9e7bca_meta.json  fallback-check.json  test-session-persistence.json
data/docs/: product_faq.docx
data/faiss/: index.faiss  index.pkl
scripts/: demo.py  update_docs.py
src/customer_support_chatbot.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/mock_project/: __init__.py  api.py  chatbot.py  config.py  document_loader.py  vectorstore.py
tests/: test_document_pipeline.py
web/: .env  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json
web/src/: App.tsx  api.ts  styles.css
